--- a/css/main.scss
+++ b/css/main.scss
@@ -3,11 +3,13 @@
 ---
 @charset "utf-8";
 
-// Our variables
-$base-font-family: 'PT Serif', Georgia, Times, 'Times New Roman', serif;
-$base-font-size:   12pt;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+// Our variables $base-font-family: 'PT Serif', Georgia, Times, 'Times New Roman', serif;
+
+ $base-font-family: Helvetica, Tahoma,  'PT Serif', Georgia, Times, 'Times New Roman', serif, STXihei, "华文细黑", Heiti, "黑体", "WenQuanYi Micro Hei", "Microsoft YaHei", "微软雅黑",  sans-serif;
+
+$base-font-size:   13pt;
+$small-font-size:  $base-font-size * 0.775;
+$base-line-height: 1.35;
 
 $mono-font-family: 'Source Code Pro', Menlo, Monaco, Inconsolata;
 
