--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,9 @@
 
 // Our variables $base-font-family: 'PT Serif', Georgia, Times, 'Times New Roman', serif;
 
- $base-font-family: Helvetica, Tahoma,  'PT Serif', Georgia, Times, 'Times New Roman', serif, STXihei, "华文细黑", Heiti, "黑体", "WenQuanYi Micro Hei", "Microsoft YaHei", "微软雅黑",  sans-serif;
+// $base-font-family: Helvetica, Tahoma,  'PT Serif', Georgia, Times, 'Times New Roman', serif, STXihei, "华文细黑", Heiti, "黑体", "WenQuanYi Micro Hei", "Microsoft YaHei", "微软雅黑",  sans-serif;
+
+$base-font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Noto Sans", Roboto,  "Microsoft YaHei", "微软雅黑",  sans-serif, serif;
 
 $base-font-size:   13pt;
 $small-font-size:  $base-font-size * 0.775;
