--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,7 +27,7 @@ a:after {
   content: '';
   display: block;
   margin: auto;
-  height: 3px;
+  height: 2px;
   width: 0px;
   background: transparent;
   transition: width .5s ease, background-color .5s ease;
@@ -36,24 +36,7 @@ a:hover:after {
   width: 100%;
   background: $alt-color;
 }
-a {
-  display: inline-block;
-  position: relative;
-  padding-bottom: 3px;
-}
-a:after {
-  content: '';
-  display: block;
-  margin: auto;
-  height: 3px;
-  width: 0px;
-  background: transparent;
-  transition: width .5s ease, background-color .5s ease;
-}
-a:hover:after {
-  width: 100%;
-  background: $alt-color;
-}
+
 
   p {
     line-height: $base-line-height;
@@ -235,6 +218,16 @@ footer {
 sup > .footnote {
   margin-left: -0.2em;
   font-style: normal;
+}
+
+#github_icon {
+  margin-left: 18em;
+  > a {
+    color: $icon-color;
+    }
+    a:hover:after {
+     width: 0;
+    }
 }
 
 table {
