--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 
 // $base-font-family: Helvetica, Tahoma,  'PT Serif', Georgia, Times, 'Times New Roman', serif, STXihei, "华文细黑", Heiti, "黑体", "WenQuanYi Micro Hei", "Microsoft YaHei", "微软雅黑",  sans-serif;
 
-$base-font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Noto Sans", Roboto,  "Microsoft YaHei", "微软雅黑",  sans-serif, serif;
+$base-font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Noto Sans", Roboto,  "Microsoft YaHei", "微软雅黑",  sans-serif;
 
 $base-font-size:   12pt;
 $small-font-size:  $base-font-size * 0.875;
@@ -19,7 +19,7 @@ $text-color:       hsl(0, 0%, 25%);
 
 $alt-color:        hsl(0, 70%, 46%);
 $alt-color-darker: darken($alt-color, 6%);
-
+$icon-color:       #848484;
 $article-bg-color: hsl(35, 36%, 95%);
 $background-color: darken($article-bg-color, 6%);
 $bg-color-darker:  darken($article-bg-color, 15%);
