add blog a class

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
         </div>
           {% endif %} -->
            {% if site.github_username %}
-          <div id="github_icon">
+          <div class="github_icon">
             <a href="https://github.com/{{ site.github_username }}/{{ site.github_username }}.github.io">
               <span class="icon fa fa-github fa-2x"></span>
             </a> 
