--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -227,7 +227,7 @@ sup > .footnote {
   font-style: normal;
 }
 
-#github_icon {
+.github_icon {
   margin-left: 18em;
   > a {
     color: $icon-color;
