--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -113,7 +113,7 @@ article {
     font-family: $mono-font-family;
   }
 
-  p {
+  > p,ul,li {
       font-family: $chinese-font-family;
       }
 }
