--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,4 +22,16 @@ layout: default
 	     </div>
      </div>
   </div>
+  <hr>
+<!-- yungentie -->
+<div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
+<script>
+  var cloudTieConfig = {
+    url: document.location.href, 
+    sourceId: "",
+    productKey: "67feb75df28a4432ba89b1b1843d2f70",
+    target: "cloud-tie-wrapper"
+  };
+</script>
+<script src="https://img1.ws.126.net/f2e/tie/yun/sdk/loader.js"></script>
 </div>
