--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,19 @@ layout: default
           {{ content }}
         </article>
 	     </div>
-     </div>
+       <!--yungentie-->
+       <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
+          <script src="https://img1.ws.126.net/f2e/tie/yun/sdk/loader.js"></script>
+          <script>
+          var cloudTieConfig = {
+            url: document.location.href, 
+            sourceId: "",
+            productKey: "67feb75df28a4432ba89b1b1843d2f70",
+            target: "cloud-tie-wrapper"
+          };
+          var yunManualLoad = true;
+          Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vcGMvbGl2ZXNjcmlwdC5odG1s", true);
+          </script>
+      </div>
   </div>
 </div>
