--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,5 +21,5 @@ layout: default
         </article>
        </div>
      </div><!-- close row2-->
-  </div>
+  </div><!-- container main-->
 </div> <!-- close post-->
