--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,23 @@
 <footer>
   <div class="container">
-    <div class="row biography">
-      <div class="col-sm-4">
-        <h2 class="chinese">学会解决问题</h2>
+<!--     <div class="row biography">
+      <div class="col-sm-6">
+        <h2>who am i</h2>
         <p class="chinese">{{ site.biography }}</p>
       </div>
-      <div class="col-sm-4">
-        <h2 class="chinese">不断学习</h2>
+      <div class="col-sm-6">
+        <h2>what is this</h2>
         <p class="chinese">{{ site.description }}</p>
-      </div>
-      <div class="col-sm-4">
-        <h2 class="chinese">关注你在做的</h2>
-          {% if site.email %}<p class="chinese">当你全身心投入一件事的时候，你就会处于一个开心的状态。当我们处于这种状态，你就不大会关心别人对你怎么看，不大会被不大重要的事情干扰。</p>
-         <!--  <div>
-            <a href="mailto:{{ site.email }}">
-            <span class="icon fa fa-envelope fa-2x"></span>
-         </a>
-        </div>
-          {% endif %} -->
-           {% if site.github_username %}
-          <div class="github_icon">
-            <a href="https://github.com/{{ site.github_username }}/{{ site.github_username }}.github.io">
-              <span class="icon fa fa-github fa-2x"></span>
-            </a> 
-          </div>
-          {% endif %}
+      </div> -->
+
+    <!--       {% if site.github_username %}
+               <div class="github_icon">
+                 <a href="https://github.com/{{ site.github_username }}/{{ site.github_username }}.github.io">
+                   <span class="icon fa fa-github fa-2x"></span>
+                 </a> 
+               </div>
+
+          {% endif %}  -->
 
           <!-- {% if site.twitter_username %}
           <div>
