--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,9 @@ layout: default
 ---
 <div class="post">
   <div class="container main">
+        <div style="text-align: right;" class="row navbar">
+         <a class="fa fa-home" href="/"></a>
+        </div>
     <div class="row">
       <header>
         <center><span itemprop="name"><h1>{{ page.title }}</h1></span></center>
