--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -62,8 +62,9 @@ a:hover:after {
    }
 
   h1 {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 2em;
+    margin-top: 30px;
          }
 
   h2 {
