--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
       }
     };
   </script>
-  <script type="text/javascript" async
+  <!-- <script type="text/javascript" async
 src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
   <script>
@@ -49,5 +49,5 @@ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 
     ga('create', '{{ site.google-analytics }}', 'auto');
     ga('send', 'pageview');
-  </script>
+  </script> -->
 </head>
