--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <div class="post">
   <div class="container main">
         <div style="text-align: right;" class="row navbar">
-         <a class="fa fa-home" href="/"></a>
+         <a style="color: #848484!important;" class="fa fa-home" href="/"></a>
         </div>
     <div class="row">
       <header>
