--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,7 +17,7 @@ body {
       font-family: $chinese-font-family;
     }
 
-  a, a:hover {
+  a, a:hover, a:link,a:visited,a:focus {
     color: $alt-color;
     text-decoration:none
   }
