--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,9 @@ layout: default
 ---
 <div class="post">
   <div class="container main">
-        <div style="text-align: right;" class="row navbar">
-         <a style="color: #848484!important;" class="fa fa-home" href="/"></a>
+        <div style="text-align: right;" class="navbar">
+         <a class="fa fa-home" href="/"></a>
+         <!-- <a class="fa fa-github" href="https://github.com/symphonyh" title="GitHub"></a> -->
         </div>
     <div class="row">
       <header>
