--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $text-color:       hsl(0, 0%, 25%);
 
 $alt-color:        hsl(0, 70%, 46%);
 $alt-color-darker: darken($alt-color, 6%);
-$icon-color:       #848484;
+$icon-color:       #c0bcbf;
 $article-bg-color: hsl(0, 0, 98%);
 $background-color: darken($article-bg-color, 6%);
 $bg-color-darker:  darken($article-bg-color, 15%);
