--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,7 +15,7 @@ body {
  
   .navbar {
     
-    margin-right: 2em;
+    margin-right: 1em;
   > a {
     color: $icon-color !important;
     }
@@ -74,6 +74,7 @@ a:hover:after {
 
   h1 {
     font-weight: 500;
+    font:bold;
     font-size: 2em;
     margin-top: 30px;
     text-shadow: 2px 2px 2px $icon-color;
