--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 
 // Our variables 
 $base-font-family:   'PT Serif', Georgia, Times, 'Times New Roman', serif;
-$chinese-font-family: Helvetica, Tahoma, Arial, "Microsoft YaHei", "微软雅黑",  sans-serif;
+$chinese-font-family: Helvetica, Tahoma, Arial, "YaHei Consolas Hybrid", "Microsoft YaHei", "微软雅黑",  sans-serif;
 $base-font-size:   12pt;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
