12100826-oh my posh

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,32 +1,33 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+
 @charset "utf-8";
 
-// Our variables 
-$base-font-family:   'PT Serif', Georgia, Times, 'Times New Roman', serif;
-$chinese-font-family:  'PT Serif', Georgia, Times, 'Times New Roman', Helvetica, Tahoma, Arial, "YaHei Consolas Hybrid", "Microsoft YaHei", "微软雅黑",  sans-serif;
-$base-font-size:   11.5pt;
-$small-font-size:  $base-font-size * 0.875;
+// Our variables
+$base-font-family: "PT Serif", Georgia, Times, "Times New Roman", serif;
+$chinese-font-family: "PT Serif", Georgia, Times, "Times New Roman", Helvetica,
+  Tahoma, Arial, "YaHei Consolas Hybrid", "Microsoft YaHei", "微软雅黑",
+  sans-serif;
+$base-font-size: 11.5pt;
+$small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.3;
 
-$mono-font-family: Monaco, 'Source Code Pro', 'Microsoft YaHei Mono', Menlo, Inconsolata;
+$mono-font-family: Monaco, "Source Code Pro", "Microsoft YaHei Mono", Menlo,
+  Inconsolata;
 
-$text-color:       hsl(0, 0%, 25%);
+$text-color: hsl(0, 0%, 25%);
 
-$alt-color:        hsl(0, 70%, 46%);
+$alt-color: hsl(0, 70%, 46%);
 $alt-color-darker: darken($alt-color, 6%);
-$icon-color:       #c0bcbf;
-$hover-color:      #FFECEC;
+$icon-color: #c0bcbf;
+$hover-color: #ffecec;
 $article-bg-color: hsl(0, 0, 98%);
 $background-color: darken($article-bg-color, 3%);
-$bg-color-darker:  darken($article-bg-color, 15%);
-$alt-text-color:   darken($article-bg-color, 40%);
+$bg-color-darker: darken($article-bg-color, 15%);
+$alt-text-color: darken($article-bg-color, 40%);
 
-$subdued-border:   rgba($bg-color-darker, 0.5);
+$subdued-border: rgba($bg-color-darker, 0.5);
 
 // Import partials from `sass_dir` (defaults to `_sass`)// ,"syntax-highlighting"
-@import
-  "base"
- 
-;
+@import "base";
